# Data-Market-Adquisitor-System

./: README.md  pyproject.toml
app/: app.py  requirements.txt
data_market_adquisitor_system/: CoinGecko.py  coin_OHLCV.csv  ripple_30minutes.csv  ripple_4days.csv  ripple_4hours.csv
database/: Dockerfile  create_fixtures.sql
